test/fixtures/source-map/output/source_map_throw_icu.snapshot
node:diagnostics_channel:315
        throw err;
        ^

Error: an error
    at Object.createElement (*icu.jsx:3:23)
    at Object.<anonymous> (*icu.jsx:9:5)

Node.js *
